[package]
name = "aaarg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15"
eframe = "0.17"
tinyfiledialogs = "3.9"
libaaarg = { git = "https://github.com/TheMagzuz/libaaarg" }
hound = "3.4.0"
